.k8s/apps/readeck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: readeck
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: readeck
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: e02ca7815840a6ce50cda21cd732af26fb7d3c1c
    kubenix/module-instance: readeck
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: readeck
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: readeck
      app.kubernetes.io/name: readeck
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: readeck
        app.kubernetes.io/name: readeck
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: READECK_LOG_FORMAT
              value: text
            - name: READECK_LOG_LEVEL
              value: info
            - name: READECK_SERVER_HOST
              value: 0.0.0.0
            - name: READECK_SERVER_PORT
              value: "8000"
          image: codeberg.org/readeck/readeck:0.23.1@sha256:d1dde9c0a7292fffe4170ec410aeffb03d67693b41f954918aad8dc3dd70786b
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - mountPath: /readeck
              name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: main
          persistentVolumeClaim:
            claimName: readeck
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.143
    lbipam.cilium.io/sharing-key: readeck
  labels:
    app.kubernetes.io/instance: readeck
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: readeck
    app.kubernetes.io/service: readeck
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: e02ca7815840a6ce50cda21cd732af26fb7d3c1c
    kubenix/module-instance: readeck
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: readeck
  namespace: apps
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: readeck
    app.kubernetes.io/name: readeck
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: readeck
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: readeck
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: e02ca7815840a6ce50cda21cd732af26fb7d3c1c
    kubenix/module-instance: readeck
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: readeck
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: readeck.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: readeck
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - readeck.josevictor.me
      secretName: wildcard-tls
